2007-05-03	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Handle .data.* sections

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Add dummy printk support so all tests link.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-06-24	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds, startup/linkcmds-le, startup/linkcmds-le.coff: Add
	.rela.dyn sections.

2006-03-08	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds, startup/linkcmds-le, startup/linkcmds-le.coff: Add
	.gnu.linkonce.b.* section.

2006-02-08	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds, startup/linkcmds-le, startup/linkcmds-le.coff: Add
	sections required by newer gcc versions.

2006-01-11	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Add preinstall.am.

2005-05-26	Ralf Corsepius <ralf.corsepius@rtems.org>

	* include/bsp.h: New header guard.

2005-01-07	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate CFLAGS_OPTIMIZE_V.

2005-01-02	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove build-variant support.

2004-09-24	Ralf Corsepius <ralf_corsepius@rtems.org>

	* configure.ac: Require automake > 1.9.

2004-04-23	Ralf Corsepius <ralf_corsepius@rtems.org>

	PR 610/bsps
	* Makefile.am: Add include/tm27.h, Cosmetics.
	* include/tm27.h: Final cosmetics.

2004-04-22	Ralf Corsepius <ralf_corsepius@rtems.org>

	* include/bsp.h: Split out tmtest27 support.
	* include/tm27.h: New.
